refactor(api): prepare x-total-count and link
Removed Content-Range and prepared X-Total-Count and Link headers
