# apps/api/src/job-posting/router.js
@@ -14,7 +14,7 @@ const router = new Router({
 });
 
 router.get('/', async ctx => {
-    const { jobPostings, contentRange } = await getJobPostingPaginatedList({
+    const { jobPostings } = await getJobPostingPaginatedList({
         client: ctx.db,
         filters: parseJsonQueryParameter(ctx.query.filters),
         sort: parseJsonQueryParameter(ctx.query.sort),
@@ -24,7 +24,10 @@ router.get('/', async ctx => {
         },
     });
 
-    ctx.set('Content-Range', contentRange);
+    // ToDo: Add X-Total-Count Header
+    ctx.set('X-Total-Count', 0);
+    // ToDo: Add Link Header
+    ctx.set('Link', 'TODO');
     ctx.body = jobPostings;
 });
 
