# apps/api/src/toolbox/sanitizers.js
@@ -62,20 +62,6 @@ const paginationSanitizer = ({ perPage, currentPage }) => {
 };
 
 /**
- * Transforms the Knex paging object into a string compatible with the "content-Range" header.
- * https://developer.mozilla.org/fr/docs/Web/HTTP/Headers/Content-Range
- *
- * @param {string} objectType - type of object returned in the paginated collection
- * @param {object} pagination - Knex pagination object (https://github.com/felixmosh/knex-paginate#pagination-object)
- * @returns {string} string ready to be set has "Content-Range" http header
- * @example Content-Range: posts 0-24/319
- */
-const formatPaginationContentRange = (objectType, pagination) =>
-    `${objectType.toLowerCase()} ${pagination.from}-${pagination.to}/${
-        pagination.total
-    }`;
-
-/**
  * This method intercepts query parameters expected in JSON but incorrectly formatted.
  *
  * @param {string} parameter - the query parameter expected in JSON
@@ -94,7 +80,6 @@ const parseJsonQueryParameter = parameter => {
 
 module.exports = {
     filtersSanitizer,
-    formatPaginationContentRange,
     paginationSanitizer,
     parseJsonQueryParameter,
     sortSanitizer,
